# svg_plot

./: CMakeLists.txt
.circleci/: config.yml
doc/: Doxyfile.in
example/: CMakeLists.txt  auto_2d_plot.cpp
include/boost/svg_plot/detail/: auto_axes.hpp  fp_compare.hpp  functors.hpp  numeric_limits_handling.hpp  svg_tag.hpp
test/: CMakeLists.txt
